workloads/network-policies/base/allow-istiod.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod
  namespace: auth
spec:
  podSelector: {} # 네임스페이스 내 모든 파드
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
    ports:
    - port: 15012
      protocol: TCP
    - port: 15010
      protocol: TCP
    - port: 15014
      protocol: TCP
    - port: 15017
      protocol: TCP
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod
  namespace: character
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
    ports:
    - port: 15012
      protocol: TCP
    - port: 15010
      protocol: TCP
    - port: 15014
      protocol: TCP
    - port: 15017
      protocol: TCP
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod
  namespace: chat
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
    ports:
    - port: 15012
      protocol: TCP
    - port: 15010
      protocol: TCP
    - port: 15014
      protocol: TCP
    - port: 15017
      protocol: TCP
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod
  namespace: image
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
    ports:
    - port: 15012
      protocol: TCP
    - port: 15010
      protocol: TCP
    - port: 15014
      protocol: TCP
    - port: 15017
      protocol: TCP
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod
  namespace: images
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
    ports:
    - port: 15012
      protocol: TCP
    - port: 15010
      protocol: TCP
    - port: 15014
      protocol: TCP
    - port: 15017
      protocol: TCP
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod
  namespace: location
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
    ports:
    - port: 15012
      protocol: TCP
    - port: 15010
      protocol: TCP
    - port: 15014
      protocol: TCP
    - port: 15017
      protocol: TCP
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod
  namespace: my
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
    ports:
    - port: 15012
      protocol: TCP
    - port: 15010
      protocol: TCP
    - port: 15014
      protocol: TCP
    - port: 15017
      protocol: TCP
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod
  namespace: scan
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
    ports:
    - port: 15012
      protocol: TCP
    - port: 15010
      protocol: TCP
    - port: 15014
      protocol: TCP
    - port: 15017
      protocol: TCP
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod
  namespace: info
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
    ports:
    - port: 15012
      protocol: TCP
    - port: 15010
      protocol: TCP
    - port: 15014
      protocol: TCP
    - port: 15017
      protocol: TCP
    - port: 443
      protocol: TCP
