workloads/network-policies/base/data-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-ingress-from-business-logic
  namespace: postgres
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              tier: business-logic
      ports:
        - protocol: TCP
          port: 5432  # PostgreSQL
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-ingress-from-business-logic
  namespace: redis
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              tier: business-logic
      ports:
        - protocol: TCP
          port: 6379  # Redis
